# QSanguosha-For-Hegemony

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sanguosha.qm
extensions/: Xmode.lua
lua/: sgs_ex.lua
lua/ai/: debug-ai.lua  guanxing-ai.lua  momentum-ai.lua  smart-ai.lua  standard-qun-ai.lua  standard-shu-ai.lua  standard-wu-ai.lua  standard_cards-ai.lua  strategic_advantage-ai.lua  transformation-ai.lua
src/: main.cpp
src/core/: audio.cpp  engine.cpp  json.h  settings.cpp  skill.cpp  skill.h
src/dialog/: configdialog.cpp  generaloverview.cpp
src/ui/: lightboxanimation.cpp  skinbank.cpp
swig/: sanguosha_wrap.cxx
